# pipelines

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/pipelines/: __init__.py  gpt35turbo.py  gpt4o.py  gpt4turbo.py  groq-llama3-70b.py  groq-llama3-8b.py  ollama-llama3.py  ollama-llava-llama3.py  ollama-llava.py
